# Nautilus-Taildrop

./: .gitignore  README.md  conftest.py  install.sh  nautilus-taildrop.py  pyproject.toml  send-via-taildrop.py  taildrop-auto-receive.sh  test_taildrop.py  uninstall.sh
packaging/aur/: .SRCINFO  PKGBUILD  nautilus-taildrop.install
